@@ -955,28 +955,28 @@ $strSetupServers_ShowDatabasesCommand_desc = 'SQL kommando for å hente liste ov
 $strSetupServers_CountTables_name = 'Tell tabeller';
 $strSetupServers_CountTables_desc = 'Tell tabeller ved visning av databaseliste';
 $strSetupServers_pmadb_name = 'PMA database';
-$strSetupServers_pmadb_desc = 'Database brukt for relasjoner, bokmerker og PDF egenskaper. Se [a@http://wiki.phpmyadmin.net/pma/pmadb]pmadb[/a] for komplett informasjon. La stå blank for å slå av. Standard: [kbd]phpmyadmin[/kbd]';
+$strSetupServers_pmadb_desc = 'Database brukt for relasjoner, bokmerker og PDF egenskaper. Se [a@http://wiki.phpmyadmin.net/pma/pmadb]pmadb[/a] for komplett informasjon. La stå blank for å slå av. Anbefalt: [kbd]phpmyadmin[/kbd]';
 $strSetupServers_controluser_name = 'Kontrollbruker';
 $strSetupServers_controluser_desc = 'En spesiell MySQL bruker konfigurert med begrensede rettigheter, mer informasjon tilgjengelig på [a@http://wiki.phpmyadmin.net/pma/controluser]wiki[/a]';
 $strSetupServers_controlpass_name = 'Kontrollbrukerpassord';
 $strSetupServers_verbose_check_name = 'Full kontroll';
 $strSetupServers_verbose_check_desc = 'Slå av hvis du vet at dine pma_* tabeller er oppdaterte. Denne forhindrer kompabilitetssjekk og øker ytelsen';
 $strSetupServers_bookmarktable_name = 'Bokmerketabell';
-$strSetupServers_bookmarktable_desc = 'La stå tom for ingen [a@http://wiki.phpmyadmin.net/pma/bookmark]bokmerke[/a]støtte, standard: [kbd]pma_bookmark[/kbd]';
+$strSetupServers_bookmarktable_desc = 'La stå tom for ingen [a@http://wiki.phpmyadmin.net/pma/bookmark]bokmerke[/a]støtte, anbefalt: [kbd]pma_bookmark[/kbd]';
 $strSetupServers_relation_name = 'Relasjonstabell';
-$strSetupServers_relation_desc = 'La stå tom for ingen [a@http://wiki.phpmyadmin.net/pma/relation]relasjonslink[/a]støtte, suggested: [kbd]pma_relation[/kbd]';
+$strSetupServers_relation_desc = 'La stå tom for ingen [a@http://wiki.phpmyadmin.net/pma/relation]relasjonslink[/a]støtte, anbefalt: [kbd]pma_relation[/kbd]';
 $strSetupServers_table_info_name = 'Visningsfelttabell';
-$strSetupServers_table_info_desc = 'Tabell for beskrivelse av visningsfelter, la stå tom for ingen støtte; standard: [kbd]pma_table_info[/kbd]';
+$strSetupServers_table_info_desc = 'Tabell for beskrivelse av visningsfelter, la stå tom for ingen støtte; anbefalt: [kbd]pma_table_info[/kbd]';
 $strSetupServers_table_coords_name = 'PDF schema: tabellkoordinater';
-$strSetupServers_table_coords_desc = 'La stå tom for ingen PDF schema støtte, standard: [kbd]pma_table_coords[/kbd]';
+$strSetupServers_table_coords_desc = 'La stå tom for ingen PDF schema støtte, anbefalt: [kbd]pma_table_coords[/kbd]';
 $strSetupServers_pdf_pages_name = 'PDF schema: sidetabell';
-$strSetupServers_pdf_pages_desc = 'La stå tom for ingen PDF schema støtte, standard: [kbd]pma_pdf_pages[/kbd]';
+$strSetupServers_pdf_pages_desc = 'La stå tom for ingen PDF schema støtte, anbefalt: [kbd]pma_pdf_pages[/kbd]';
 $strSetupServers_column_info_name = 'Kolonneinformasjonstabell';
-$strSetupServers_column_info_desc = 'La stå tom for ingen kolonnekommentarer/mime typer, standard: [kbd]pma_column_info[/kbd]';
+$strSetupServers_column_info_desc = 'La stå tom for ingen kolonnekommentarer/mime typer, anbefalt: [kbd]pma_column_info[/kbd]';
 $strSetupServers_history_name = 'SQL spørringshistorietabell';
-$strSetupServers_history_desc = 'La stå tom for ingen SQL spørringshistorie, standard: [kbd]pma_history[/kbd]';
+$strSetupServers_history_desc = 'La stå tom for ingen SQL spørringshistorie, anbefalt: [kbd]pma_history[/kbd]';
 $strSetupServers_designer_coords_name = 'Designertabell';
-$strSetupServers_designer_coords_desc = 'La stå tom for ingen Designer støtte, standard: [kbd]pma_designer_coords[/kbd]';
+$strSetupServers_designer_coords_desc = 'La stå tom for ingen Designer støtte, anbefalt: [kbd]designer_coords[/kbd]';
 $strSetupUploadDir_name = 'Opplastingsmappe';
 $strSetupUploadDir_desc = 'Mappe på tjeneren hvor du kan laste opp filer for import';
 $strSetupSaveDir_name = 'Lagringsmappe';
